--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h1>test</h1>
-<p>홍박사는 위대하다</p>
+<a href="/users/login">로그인</a>
+<a href="/users/register">회원가입</a>
+<a href="/users/logout">로그아웃</a>
 </body>
 </html>
