--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Register</title>
+    <title>회원가입</title>
 </head>
 <body>
-<h2>Register</h2>
+<h2>회원가입</h2>
 
-<form action="/api/auth/register" method="post" th:object="${userRegisterDTO}">
-    <div>
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" th:field="*{username}" required />
-    </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" th:field="*{password}" required />
-    </div>
-    <div>
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" th:field="*{name}" required />
-    </div>
-    <div>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" th:field="*{email}" required />
-    </div>
-    <div>
-        <label for="nickname">Nickname</label>
-        <input type="text" id="nickname" name="nickname" th:field="*{nickname}" required />
-    </div>
-    <div>
-        <button type="submit">Register</button>
-    </div>
+<form action="/users/register" method="post">
+    <label>이메일:</label>
+    <input type="email" name="email" required /><br/>
+
+    <label>닉네임:</label>
+    <input type="text" name="nickname" required /><br/>
+
+    <label>아이디:</label>
+    <input type="text" name="username" required /><br/>
+
+    <label>비밀번호:</label>
+    <input type="password" name="password" required /><br/>
+
+    <button type="submit">가입하기</button>
 </form>
+
+<p th:if="${error}" th:text="${error}" style="color: red;"></p>
+
+<a href="/users/login">로그인 페이지로 이동</a>
 </body>
 </html>
