--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,7 +6,7 @@
 <body>
 <h2>회원가입</h2>
 
-<form action="/users/register" method="post">
+<form action="/user/register" method="post">
     <label>이메일:</label>
     <input type="email" name="email" required /><br/>
 
