--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,65 +14,11 @@
     <label>비밀번호:</label>
     <input type="password" id="password" required /><br/>
 
+    <a href="/oauth2/authorization/naver">naver login</a><br>
+    <a href="/oauth2/authorization/google">google login</a>
+
     <button type="submit">로그인</button>
 </form>
-
-<p id="message"></p>
-
-<script>
-    $(document).ready(function () {
-        // 페이지 로드 시 환영 메시지 가져오기 (Thymeleaf에서 전달된 메시지 사용)
-        $.get("/api/message?type=welcome", function (data) {
-            $("#message").text(data);
-        });
-
-        // 페이지 로드 시 토큰 있는지 확인하고 있으면 자동 설정
-        var token = localStorage.getItem("jwtToken");
-        if (token) {
-            setGlobalTokenHeader(token);
-        }
-
-        // 로그인 폼 제출 이벤트
-        $("#loginForm").submit(function (event) {
-            event.preventDefault();
-
-            var username = $("#username").val();
-            var password = $("#password").val();
-
-            $.ajax({
-                type: "POST",
-                url: "/user/login",
-                contentType: "application/json",
-                data: JSON.stringify({ username: username, password: password }),
-                success: function (data, textStatus, xhr) {
-                    var accessToken = xhr.getResponseHeader("access");
-                    if (accessToken) {
-                        // 토큰 저장 + 이후 요청에 자동으로 토큰 붙이기
-                        localStorage.setItem("jwtToken", accessToken);
-                        setGlobalTokenHeader(accessToken);
-
-                        alert("로그인 성공!");
-                        window.location.href = "/"; // 메인 페이지 이동
-                    } else {
-                        alert("로그인 성공했지만, 토큰 수신에 실패했습니다.");
-                    }
-                },
-                error: function (xhr) {
-                    alert("로그인 실패: " + xhr.responseText);
-                }
-            });
-        });
-
-        // 전역 AJAX 설정 함수 (토큰 헤더 자동 추가)
-        function setGlobalTokenHeader(token) {
-            $.ajaxSetup({
-                beforeSend: function (xhr) {
-                    xhr.setRequestHeader("Authorization", "Bearer " + token);
-                }
-            });
-        }
-    });
-</script>
 
 <!-- 타임리프에서 사용할 수 있는 링크 추가 -->
 <a th:href="@{/users/register}">회원가입 페이지로 이동</a>
