OAuth2 및 LOCAL 회원가입

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,6 +21,7 @@
 </form>
 
 <!-- 타임리프에서 사용할 수 있는 링크 추가 -->
-<a th:href="@{/users/register}">회원가입 페이지로 이동</a>
+<a th:href="@{/}">메인페이지로 이동</a>
+<a th:href="@{/user/registerForm}">회원가입 페이지로 이동</a>
 </body>
 </html>
